[package]
name = "boosttorrent2"
version = "0.1.0"
authors = ["Thomas Harris <teh019283@gmail.com>", "Jake Sandler <jsandler18@gmail.com>"]

[dependencies]
derive-error = "0.0.4"
hyper = "0.12"
rust-crypto = "0.2.36"
maplit = "1.0.1"
tokio = "0.1"
percent-encoding = "1.0.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_bytes = "0.10.4"

[dependencies.clap]
version = "~2.32.0"
features = ["yaml"]