[package]
name = "boosttorrent2"
version = "0.1.0"
authors = ["Thomas Harris <teh019283@gmail.com>", "Jake Sandler <jsandler18@gmail.com>"]

[dependencies]
derive-error = "0.0.4"
hyper = "0.12"
rust-crypto = "0.2.36"
maplit = "1.0.1"
tokio = "0.1"
percent-encoding = "1.0.1"
log = "0.4.6"
simple_logger = "1.0.1"
rand = "0.5.5"
bit-vec = "0.5.0"
futures = "0.1.25"
byteorder = "1.2.7"
bytes = "0.4.11"

[dependencies.clap]
version = "~2.32.0"
features = ["yaml"]